fix: remove overflow/hidden

--- a/src/components/PageModal/PageModal.module.css
+++ b/src/components/PageModal/PageModal.module.css
@@ -7,7 +7,6 @@
   top: 0;
   left: 50%;
   transform: translate(-50%);
-  overflow: hidden;
 }
 
 @media (max-width: 410px) {
